# mipworkshop2024

./: .gitignore  CMakeLists.txt  postsolve.sh  presolve.sh  runBenchmark.sh  runFull.sh  runPresolve.sh
apps/: CMakeLists.txt  CheckSolutions.cpp  CompareResults.cpp  mpsConvert.cpp  postsolve.cpp  presolve.cpp  runIntegratedSCIP.cpp  runSCIP.cpp
include/mipworkshop2024/: ApplicationShared.h  IO.h  Logging.h  MatrixSlice.h  Problem.h  Shared.h  Solution.h  Solve.h  SparseMatrix.h  Submatrix.h
include/mipworkshop2024/presolve/: CCCScaling.hpp  IncidenceAddition.h  Network.h  NetworkAddition.hpp  NetworkAdditionComplete.hpp  NetworkColumnAddition.h  NetworkDecomposition.h  NetworkRowAddition.h  PostSolveStack.h  Presolver.h  PresolvingProblem.h  SPQRColumnAddition.h  SPQRDecomposition.h  SPQRRowAddition.h  SPQRShared.h  TUColumnSubmatrix.h
src/: ApplicationShared.cpp  ExternalSolution.cpp  ExternalSolution.h  IO.cpp  IO.h  Logging.cpp  Problem.cpp  Problem.h  Shared.cpp  Shared.h  Solution.cpp  Solution.h  Solve.cpp  SparseMatrix.cpp  SparseMatrix.h  Submatrix.cpp  Submatrix.h
src/presolve/: CCCScaling.cpp  IncidenceAddition.cpp  IncidenceAddition.h  Network.c  NetworkAddition.cpp  NetworkAdditionComplete.cpp  NetworkColumnAddition.c  NetworkDecomposition.c  PostSolveStack.cpp  PostSolveStack.h  Presolver.cpp  PresolvingProblem.cpp  PresolvingProblem.h  SPQRColumnAddition.c  SPQRDecomposition.c  SPQRRowAddition.c  SPQRShared.c  TUColumnSubmatrix.cpp  TUColumnSubmatrix.h
tests/: CMakeLists.txt  MPSReaderTest.cpp  TestHelpers.cpp  TestHelpers.h  networkAdditionTest.cpp  test_main.cpp
tests/data/: bell5_max.mps
